force-app/main/default/objects/Sustain_PicklistMigration__mdt/Sustain_PicklistMigration__mdt.object-meta.xml
<CustomObject>
    <label>Sustain_PicklistMigration</label>
    <pluralLabel>Sustain_PicklistMigrations</pluralLabel>
</CustomObject>