force-app/main/default/objects/Sustain_PicklistMigration__mdt/fields/Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Type__c</fullName>
    <label>Source_Record_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>