force-app/main/default/objects/Sustain_PicklistMigration__mdt/fields/Sustain_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Sustain_Target_Value__c</fullName>
    <label>Sustain_Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>