force-app/main/default/objects/Sustain_PicklistMigration__mdt/fields/Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Name__c</fullName>
    <label>Target Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>