force-app/main/default/objects/Sustain_PicklistMigration__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>DeveloperName</columns>
    <columns>Source_Field_Name__c</columns>
    <columns>Source_Record_Type__c</columns>
    <columns>Target_Object_Name__c</columns>
    <columns>Sustain_Source_Value__c</columns>
    <columns>Sustain_Target_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom</label>
</ListView>